fix(ui/AbstractPopover): add z-index

--- a/packages/ui/components/popups/Popover/AbstractPopover/index.styl
+++ b/packages/ui/components/popups/Popover/AbstractPopover/index.styl
@@ -1,5 +1,6 @@
 .root
   position absolute
+  z-index 1000
 
 .arrow
   position absolute
